apps/20-media/prowlarr/overlays/prod/dataangel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.dataangel: V-small
      annotations:
        dataangel.io/bucket: "vixens-prod-prowlarr"
        dataangel.io/sqlite-paths: "/config/prowlarr.db"
        dataangel.io/fs-paths: "/config"
        dataangel.io/s3-endpoint: "http://nas.truxonline.com:30157"
        dataangel.io/deployment-name: "prowlarr"
        dataangel.io/rclone-interval: "60s"
        dataangel.io/metrics-enabled: "true"
        dataangel.io/lock-enabled: "false"
    spec:
