apps/20-media/prowlarr/overlays/prod/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
spec:
  template:
    spec:
      volumes:
        - name: config-patcher
          configMap:
            name: prowlarr-config-patcher
