apps/20-media/prowlarr/overlays/prod/resources-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    vixens.io/sizing.prowlarr: V-small
spec:
  template:
    metadata:
      labels:
        vixens.io/sizing.prowlarr: V-small
