apps/20-media/prowlarr/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prowlarr"
    gethomepage.dev/icon: "prowlarr.png"
    gethomepage.dev/group: "Media"
    traefik.ingress.kubernetes.io/router.middlewares: media-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
  tls:
    - hosts:
        - prowlarr.truxonline.com
      secretName: prowlarr-tls
